finished bootstrap of page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,3 +7,6 @@
 @import 'base/normalize';
 
 // import component files
+@import 'components/body';
+@import 'components/header';
+@import 'components/smiley';
