feat(archive): created archive home page for mobile

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,3 +10,14 @@ $bp-medium: 767px;
 $bp-large: 1023px;
 $bp-xlarge: 1279px;
 $bp-full: 1599px;
+
+@import "./library/breakpoint";
+
+/*
+|--------------------------------------------------------------------------
+| Color scheme
+|--------------------------------------------------------------------------
+*/
+$bg: #fffff4;
+$text: #000000;
+$text-highlight: #6d6d6d;
