--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,33 @@
-@import 'variables';
+@import "variables";
 
 // Import libraries
-@import 'library/breakpoint';
-@import 'library/typography';
+@import "library/layout";
+@import "library/breakpoint";
+@import "library/typography";
+@import "library/modifiers";
 // import base files
-@import 'base/normalize';
+@import "base/normalize";
+
+* {
+    box-sizing: border-box;
+}
+html,
+body,
+#sapper {
+    margin: 0;
+    padding: 0;
+    background-color: $bg;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande",
+        sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    hyphens: auto;
+    text-rendering: optimizeLegibility;
+}
+
+#sapper {
+    padding: 1.5rem;
+}
