feat(archive): reworked homepage to new style

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -18,6 +18,11 @@ $bp-full: 1599px;
 | Color scheme
 |--------------------------------------------------------------------------
 */
-$bg: #fffff4;
+$bg: #d8d8d8;
+$primary: #1f8bef;
+$secondary: #ef321f;
+$tertiary: #fcd903;
 $text: #000000;
 $text-highlight: #6d6d6d;
+$link: $primary;
+$focus: $secondary;
