--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,6 +17,8 @@
 @import "components/buttons";
 @import "components/categories";
 @import "components/footer";
+@import "components/separators";
+@import "components/table";
 
 // import page specific shit
 @import "page/root";
