--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -1,6 +1,9 @@
 footer {
     text-transform: uppercase;
+    position: relative;
+    height: 27px;
     h6 {
+        position: absolute;
         display: flex;
         align-items: center;
     }
