--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -2,7 +2,7 @@ header {
     padding: 1rem 0;
     display: flex;
     align-items: center;
-    button.arrow-button {
+    a {
         margin-right: 1.5rem;
     }
     .title {
