--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,6 +19,7 @@
 @import "components/footer";
 @import "components/separators";
 @import "components/table";
+@import "components/post";
 
 // import page specific shit
 @import "page/root";
@@ -46,9 +47,11 @@ body,
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    position: absolute;
     main {
         flex: 1;
         display: flex;
         flex-direction: column;
+        min-height: 1px;
     }
 }
