--- a/src/style/components/_separators.scss
+++ b/src/style/components/_separators.scss
@@ -1,10 +1,10 @@
 .separator {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     width: 100vw;
-    margin-top: 1rem;
+    // margin-top: 1rem;
     margin-left: -1rem;
-    min-height: 3rem;
+    min-height: 3.8rem;
     user-select: none;
     svg {
         width: 100%;
