--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -20,6 +20,7 @@
 @import "components/separators";
 @import "components/table";
 @import "components/post";
+@import "components/list-index";
 
 // import page specific shit
 @import "page/root";
