--- a/src/style/components/_post.scss
+++ b/src/style/components/_post.scss
@@ -1,17 +1,17 @@
 .post {
-    max-width: 800px;
+    max-width: 700px;
     width: 100%;
     margin: 0 auto;
     .banner-image {
         width: calc(100% + 2rem);
-        height: 300px;
+        // height: 300px;
         background: $primary;
         margin-left: -1rem;
         margin-top: -40px;
         border-radius: 2px;
-        @include bp-small {
-            height: 70vh;
-        }
+        // @include bp-small {
+        //     height: 70vh;
+        // }
         .controls {
             height: 100%;
             display: flex;
