--- a/src/style/components/_list-index.scss
+++ b/src/style/components/_list-index.scss
@@ -25,7 +25,7 @@
         .img {
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover;
+            // background-size: contain;
             width: 100%;
             height: 100%;
         }
