Feature/archive rewrite (#14)
* feat(archive): created archive home page for mobile

* feat(archive):  start of description page

* feat(archive): reworked homepage to new style

* added 'selected works' index

* Create Selected work “title-of-a-selected-work”

* animations etc

* Create Selected work “demo-proj-2”

* layout completed

* simle cypress integration

* imagery for index and text for articles

* feat(archive): finish 'selected works'

Co-authored-by: LookALuca <luca@lookaluca.com>

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,3 +10,19 @@ $bp-medium: 767px;
 $bp-large: 1023px;
 $bp-xlarge: 1279px;
 $bp-full: 1599px;
+
+@import "./library/breakpoint";
+
+/*
+|--------------------------------------------------------------------------
+| Color scheme
+|--------------------------------------------------------------------------
+*/
+$bg: #d8d8d8;
+$primary: #1f8bef;
+$secondary: #ef321f;
+$tertiary: #fcd903;
+$text: #000000;
+$text-highlight: #6d6d6d;
+$link: $primary;
+$focus: $secondary;
