--- a/src/style/components/_list-index.scss
+++ b/src/style/components/_list-index.scss
@@ -22,12 +22,22 @@
         max-height: 600px;
         position: relative;
         overflow: hidden;
-        .img {
-            background-position: center center;
-            background-repeat: no-repeat;
-            // background-size: contain;
+        picture {
             width: 100%;
             height: 100%;
+            display: flex;
+            img {
+                height: auto;
+                width: 100%;
+                user-select: none;
+                object-position: center;
+                &.object-fit-cover {
+                    object-fit: cover;
+                }
+                &.object-fit-contain {
+                    object-fit: contain;
+                }
+            }
         }
     }
 }
