--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -2,18 +2,19 @@ button {
     border: none;
     cursor: pointer;
     &.arrow-button {
-        display: inline-flex;
+        display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 100%;
         background-color: $tertiary;
         &.size-default {
             height: 2.4375rem;
             width: 2.4375rem;
+            border-radius: 2.4375rem;
         }
         &.size-small {
             height: 1.625rem;
             width: 1.625rem;
+            border-radius: 1.625rem;
             img {
                 transform: translate(-1px, -1px);
                 width: 13px;
