--- a/src/style/components/_post.scss
+++ b/src/style/components/_post.scss
@@ -1,6 +1,7 @@
 .post {
     .post-gallery {
         .vimeo-embed-container {
+            padding: 2rem;
             max-width: 1100px;
             margin: 0 auto;
         }
@@ -12,7 +13,8 @@
         width: 100%;
         margin: 0 auto;
     }
-    .banner-image {
+    .banner-image,
+    .banner-video {
         width: calc(100% + 2rem);
         background: $primary;
         margin-left: -1rem;
